2022/03/21    Nakata Maho <maho@riken.jp> 2.0 branch
            * Ctest.in test have passed for all precisions, except for linear fitting.
              Some tests using SVDs still fails, however, they will be fixed when eig tests
              will be done.

2021/10/29    Nakata Maho <maho@riken.jp> 1.0.1
            * Add -fp-model precise to fix qd and dd arithmetic for Intel one API.

2021/10/01    Nakata Maho <maho@riken.jp> 1.0.0
            * Release 1.0.0

2021/08/05    Nakata Maho <maho@riken.jp> 1.0.0
            * all test programs are built successfully on Ubuntu20.04 (amd64)

2021/7/28    Nakata Maho <maho@riken.jp> 1.0.0
            * Tests of Nonsymmetric Generalized Eigenvalue Problem driver routines
              (Rgd.in) have passed for MPFR version.
            * Tests of Generalized Symmetric Eigenvalue Problem routines (Rsg.in)
              have passed for MPFR version.

2021/7/19    Nakata Maho <maho@riken.jp> 1.0.0
            * Tests of the Rtest.in have passed for MPFR version.
              (includes driver and expert routines)

2021/7/8    Nakata Maho <maho@riken.jp> 1.0.0
            * Tests of the CS Decomposition routines (csd.in)
              have passed for MPFR version.

2021/7/7    Nakata Maho <maho@riken.jp> 1.0.0
            * Tests of Generalized Singular Value Decomposition routines (gsv.in)
              have passed for MPFR version.

2021/7/5    Nakata Maho <maho@riken.jp> 1.0.0
            * Tests Singular Value Decomposition routines (svd.in)
              have passed for MPFR version.

2021/7/1    Nakata Maho <maho@riken.jp> 1.0.0
            * MPLAPACK now use Rlaqr0 in Rhseqr.cpp for big (n>=15) matrices

2021/6/30   Nakata Maho <maho@riken.jp> 1.0.0
            * Tests of the Nonsymmetric Eigenvalue Problem Driver (Red.in)
              Rgeev (eigenvalues and eigevectors)
              have passed for MPFR version.

            * Tests of the Nonsymmetric Eigenvalue Problem Driver (Red.in)