@@ -1,3 +1,6 @@
+2022/04/24    Nakata Maho <maho@riken.jp> 2.0 branch
+            * Cec.in test (Testing complex Eigen Condition Routines) have passed for all precisions.
+
 2022/03/21    Nakata Maho <maho@riken.jp> 2.0 branch
             * Ctest.in test have passed for all precisions, except for linear fitting.
               Some tests using SVDs still fails, however, they will be fixed when eig tests
